@@ -4,6 +4,7 @@
 * Update - Updated @woocommerce/components to remove ' from negative numbers on csv files
 * Add - Add compatibility between Multi-Currency and WooCommerce Bookings.
 * Fix - Do not show default currency selector on Account Details page when only one currency is available.
+* Add - Add filters to disable or filter Multi-Currency sql query clauses for analytics.
 
 = 3.2.3 - 2021-11-01 =
 * Fix - Card fields on checkout not shown when the 'Enable payments via saved cards' setting is disabled.
